# rust_os

./: Cargo.toml  x86_64-blog_os.json
src/: main.rs
