[package]
name = "rust_os"
version = "0.1.0"
authors = ["%%GITNAME%% <%%GITEMAIL%%>"]

[dependencies]
bootloader = "0.3.4"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[package.metadata.bootimage]
default-target = "x86_64-blog_os.json"